<resources>
    <string name="app_name">Nav Drawer Experiment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="nama">Nama</string>
    <string name="alamat">Alamat</string>
    <string name="kota">Kota</string>
    <string name="email">Email</string>
    <string name="jenisKelamin">Jenis Kelamin</string>
    <string name="lakilaki">Laki-laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="hobi">Hobi</string>
    <string name="membaca">Membaca</string>
    <string name="memancing">Memancing</string>
    <string name="bersepeda">Bersepeda</string>
    <string name="date">Date</string>
    <string name="oke">Oke</string>
    <string name="batal">Batal</string>

    <string-array name="daftar_kota">
        <item>Semarang</item>
        <item>Bandung</item>
        <item>Jakarta</item>
        <item>Malang</item>
        <item>Solo</item>
    </string-array>
</resources>
