<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/text_nama"
            android:text="@string/nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/text_alamat"
            android:text="@string/alamat"
            android:layout_below="@+id/editText_Nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/text_email"
            android:text="@string/email"
            android:layout_below="@+id/editText_Alamat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/text_jenisKelamin"
            android:text="@string/jenisKelamin"
            android:layout_below="@+id/editText_Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/text_kota"
            android:text="@string/kota"
            android:layout_below="@+id/checkbox_bersepeda"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="20sp"
            />


        <TextView
            android:id="@+id/text_hobi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_below="@+id/radio_group_jenis_kelamin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/hobi"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/text_tanggal"
            android:layout_width="40pt"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_below="@id/spinner_kota"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/date"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editText_Nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_nama"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="7dp"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="43dp" />

        <EditText
            android:id="@+id/editText_Alamat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_alamat"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="7dp"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="43dp" />

        <EditText
            android:id="@+id/editText_Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_email"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="7dp"
            android:ems="10"
            android:inputType="textPersonName"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="43dp" />

        <Spinner
            android:id="@+id/spinner_kota"
            android:entries="@array/daftar_kota"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_kota"
            android:padding="12dp"
            />

        <RadioGroup
            android:id="@+id/radio_group_jenis_kelamin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/text_jenisKelamin">

            <RadioButton
                android:id="@+id/radio_button_lakilaki"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lakilaki"
                android:textSize="20sp"
                />
            <RadioButton
                android:id="@+id/radio_button_perempuan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perempuan"
                android:textSize="20sp"
                />
        </RadioGroup>

        <CheckBox
            android:id="@+id/checkbox_membaca"
            android:layout_below="@id/text_hobi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/membaca"
            android:textSize="20sp"
            />

        <CheckBox
            android:id="@+id/checkbox_memancing"
            android:layout_below="@+id/checkbox_membaca"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/memancing"
            />

        <CheckBox
            android:id="@+id/checkbox_bersepeda"
            android:layout_below="@+id/checkbox_memancing"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bersepeda"
            />

        <DatePicker
            android:id="@+id/tanggal"
            android:datePickerMode="calendar"
            android:layout_below="@id/text_tanggal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
        />

        <Button
            android:id="@+id/btn_oke"
            android:text="@string/oke"
            android:layout_below="@id/tanggal"
            android:layout_marginLeft="17mm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="tekan_oke"
            tools:ignore="OnClick"
        />

        <Button
            android:id="@+id/btn_batal"
            android:text="@string/batal"
            android:layout_below="@id/tanggal"
            android:layout_marginLeft="33mm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        />

    </RelativeLayout>
</ScrollView>
